fdo#55955 select first column if possible

Change-Id: I131cb0395c481d9cc1de210abc207221dab14bf4